# langchain-mcp-client

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  refactor_plan_async.md  requirements.txt
.github/workflows/: ci.yml
src/: agent_manager.py  database.py  llm_providers.py  mcp_client.py  memory_tools.py  tab_components.py  ui_components.py  utils.py
