[project]
name = "langchain-mcp-client"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.17.0",
    # Core LangChain packages - versions pinned for compatibility
    "langchain-anthropic==0.3.19",
    "langchain-core==0.3.74",
    "langchain-google-genai==2.1.9",
    "langchain-mcp-adapters==0.1.9",
    "langchain-ollama==0.3.7",
    "langchain-openai==0.3.31",
    "langgraph==0.6.6",
    "langgraph-checkpoint-sqlite==2.0.11",
    "mcp==1.13.1",
    "nest-asyncio>=1.6.0,<2.0.0",
    "ollama>=0.4.8",
    "streamlit==1.48.0",
    # Critical: jsonpointer required for JsonOutputParser in langchain-core
    "jsonpointer==3.0.0",
    "aiohttp>=3.12.13",
    "pypdf>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
