[project]
name = "langchain-mcp-client"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.17.0",
    # Core LangChain ecosystem versions
    "langchain==1.2.10",
    "langchain-anthropic==1.3.3",
    "langchain-core==1.2.12",
    "langchain-google-genai==4.2.0",
    "langchain-mcp-adapters==0.2.1",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.9",
    "langgraph==1.0.8",
    "langgraph-checkpoint-sqlite==3.0.3",
    "mcp==1.26.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "ollama>=0.6.0",
    "streamlit==1.54.0",
    # JsonOutputParser compatibility
    "jsonpointer==3.0.0",
    "aiohttp>=3.12.13",
    "pypdf>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
